# hubble-reference-zephyr-simple

./: .gitignore  CMakeLists.txt  README.md  prj.conf  west.yml
.github/workflows/: build.yml  sdk-main-canary.yml
src/: main.c
